<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <LinearLayout
                    android:id="@+id/foo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    >

                    <Spinner
                        android:id="@+id/spPlanAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp" />

                    <Spinner
                        android:id="@+id/spPlan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        />

                    <TextView
                        android:id="@+id/tvPlanType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/planType"
                        android:textColor="@color/primary_text"/>

                    <TextView
                        android:id="@+id/tvPlanAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textColor="@color/primary_text"/>

                    <TextView
                        android:id="@+id/tvSuitableHumidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/suitableHumidity"
                        android:textColor="@color/primary_text"/>

                    <Switch
                        android:id="@+id/sw_setting"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/enableSetting"
                        android:textColor="@color/primary_text"/>

                    <LinearLayout
                        android:id="@+id/setting_layout"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >

                        <CheckBox
                            android:id="@+id/ck_humidity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/byHumidity"
                            android:textColor="@color/primary_text"
                            android:checked="true"/>

                        <LinearLayout
                            android:id="@+id/layout_humidity_setting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">



                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvStartTime"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:paddingLeft="20dp"
                                    android:text="@string/startWhen"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />

                                <EditText
                                    android:id="@+id/edStsrtTime"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:ems="10"
                                    android:gravity="center_horizontal"
                                    android:hint="@string/set"
                                    android:inputType="number"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />

                                <TextView
                                    android:id="@+id/edPersent_01"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/persent"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/lbStopTime"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:paddingLeft="20dp"
                                    android:text="@string/stopWhen"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />

                                <EditText
                                    android:id="@+id/edStopTime"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:ems="10"
                                    android:gravity="center_horizontal"
                                    android:hint="@string/set"
                                    android:inputType="number"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />

                                <TextView
                                    android:id="@+id/edPersent_02"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/persent"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />
                            </LinearLayout>
                        </LinearLayout>

                        <CheckBox
                            android:id="@+id/ck_schedule"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bySchedule"
                            android:checked="true"
                            android:textColor="@color/primary_text"/>

                        <LinearLayout
                            android:id="@+id/layout_schedule_setting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvRepeatTime"
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:paddingLeft="10dp"
                                    android:gravity="center_horizontal"
                                    android:text="@string/repeatEvery"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />

                                <EditText
                                    android:id="@+id/edRepeatTime"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="20dp"
                                    android:layout_weight="0"
                                    android:ems="10"
                                    android:hint="@string/set"
                                    android:gravity="center_horizontal"
                                    android:inputType="number"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />

                                <TextView
                                    android:id="@+id/tvWeek"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/week"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />
                            </LinearLayout>

                            <com.nex3z.togglebuttongroup.MultiSelectToggleGroup
                                android:id="@+id/group_weekdays"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:tbgChildSpacing="auto">

                                <com.nex3z.togglebuttongroup.button.CircularToggle
                                    android:id="@+id/sun"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sunday"/>

                                <com.nex3z.togglebuttongroup.button.CircularToggle
                                    android:id="@+id/mon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/monday"
                                    />

                                <com.nex3z.togglebuttongroup.button.CircularToggle
                                    android:id="@+id/tue"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tueday"/>

                                <com.nex3z.togglebuttongroup.button.CircularToggle
                                    android:id="@+id/wed"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/wednesday"/>

                                <com.nex3z.togglebuttongroup.button.CircularToggle
                                    android:id="@+id/thu"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/thurday"/>

                                <com.nex3z.togglebuttongroup.button.CircularToggle
                                    android:id="@+id/fri"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/friday"/>

                                <com.nex3z.togglebuttongroup.button.CircularToggle
                                    android:id="@+id/sat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/saturday"/>



                                <!--...-->

                            </com.nex3z.togglebuttongroup.MultiSelectToggleGroup>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvTimeToStop"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="20dp"
                                    android:text="@string/stopUntil"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />

                                <EditText
                                    android:id="@+id/edTimeToStop"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:hint="@string/set"
                                    android:inputType="date"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView5"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/startTime"
                                    android:paddingLeft="20dp"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />

                                <EditText
                                    android:id="@+id/startTime"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:hint="@string/set"
                                    android:inputType="textPersonName"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="20dp"
                                    android:text="@string/stopTime"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />

                                <EditText
                                    android:id="@+id/editText4"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:hint="@string/set"
                                    android:inputType="textPersonName"
                                    android:textAppearance="@style/TextAppearance.AppCompat" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="?android:selectableItemBackgroundBorderless"
                android:text="Start"
                android:textColor="@color/icons"
                tools:targetApi="lollipop" />

    </LinearLayout>
